# packdeps

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Application.hs  ChangeLog.md  CheckDeps.hs  Dockerfile  Foundation.hs  Import.hs  PackDeps.hs  Settings.hs  base.Dockerfile  bundle.sh  docker.sh  packdeps-cli.hs  packdeps-yesod.cabal  packdeps-yesod.hs  packdeps.cabal  packdeps.sh  save-newest.hs  stack-9.0.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml  stack-9.8.yaml  stack.yaml  upload.sh
.github/workflows/: base.yml  docker.yml  stack.yml
Distribution/: PackDeps.hs
Distribution/PackDeps/: Types.hs  Util.hs
Handler/: Home.hs  License.hs
app/: main.hs
config/: routes
docker/: Dockerfile
kube/: rc.yaml  service.yaml
packdeps-cli/: ChangeLog.md  README.md  packdeps.cabal  upload.sh
packdeps-cli/src/Distribution/: PackDeps.hs
packdeps-cli/tools/: packdeps-cli.hs
packdeps-yesod/: devel.hs  packdeps-yesod.cabal
packdeps-yesod/config/: keter.yaml
packdeps-yesod/src/: Application.hs  Foundation.hs  Import.hs  Settings.hs
packdeps-yesod/src/Distribution/: PackDeps.hs
packdeps-yesod/src/Distribution/PackDeps/: Types.hs  Util.hs
packdeps-yesod/src/Handler/: Home.hs  License.hs
packdeps-yesod/static/tmp/: Ew4apdlK.css  GD_Hu6Wh.css
packdeps-yesod/templates/: feed.hamlet  home.hamlet  home.lucius  license.hamlet  licenses.lucius  reverse.hamlet  reverse.julius  reverse.lucius  reverselist.hamlet  specific.lucius
templates/: default-layout.hamlet  home.hamlet  license.hamlet  licenses.hamlet  reverse.hamlet  reverse.lucius  reverselist.hamlet
tools/: packdeps-cli.hs  packdeps-yesod.hs  save-newest.hs
yesod/: Application.hs  Foundation.hs  Import.hs  Settings.hs  devel.hs  packdeps-yesod.cabal
yesod/Distribution/PackDeps/: Types.hs
yesod/Handler/: Home.hs
yesod/config/: keter.yaml  routes  settings.yml
yesod/templates/: default-layout-wrapper.hamlet  feed.hamlet  feed.lucius  reverse.hamlet  reverselist.hamlet  specific.hamlet
