name:              packdeps-yesod
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://packdeps.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.License
                     Distribution.PackDeps
                     Distribution.PackDeps.Types
                     Distribution.PackDeps.Util

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2
                 , yesod-core                    >= 1.2
                 , yesod-static                  >= 1.2
                 , yesod-form                    >= 1.2
                 , yesod-newsfeed                >= 1.2
                 , clientsession
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , template-haskell
                 , shakespeare
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 1.3
                 , yaml                          >= 0.8
                 , directory                     >= 1.1
                 , warp                          >= 1.3
                 , http-conduit
                 , conduit                       >= 0.5
                 , time
                 , Cabal
                 , containers
                 , deepseq
                 , tar
                 , split
                 , vector
                 , hashable
                 , transformers
                 , binary
                 , unordered-containers
                 , ghc-prim
                 , classy-prelude-conduit        >= 0.6
                 , filepath
                 , data-default
                 , lens
                 , conduit-extra

executable         packdeps
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , packdeps-yesod
                     , yesod
    ghc-options:   -Wall -threaded -O2
