name:            packdeps
version:         0.0.2.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Check your cabal packages for lagging dependencies.
description:
    This provides a library and command line tool for checking if the upper bounds in your package's dependency list excludes the newest package available. The code was originally available only as a web interface at <http://packdeps.haskellers.com/>, but is now available for standalone use as well.
    .
    The command line tool has an incredibly simple interface: simply pass it a list of cabal files, and it will tell you what dependencies- if any- are restricted.
category:        Distribution
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://packdeps.haskellers.com/

flag web

library
    if flag(web)
        Buildable: False
    build-depends:   base                      >= 4        && < 5
                   , tar                       >= 0.3.1    && < 0.4
                   , split                     >= 0.1.2.3  && < 0.2
                   , bytestring                >= 0.9      && < 0.10
                   , text                      >= 0.7      && < 0.12
                   , Cabal                     >= 1.8      && < 1.13
                   , time                      >= 1.1.4    && < 1.4
                   , containers                >= 0.2      && < 0.5
                   , directory                 >= 1.0      && < 1.2
                   , filepath                  >= 1.1      && < 1.3
    exposed-modules: Distribution.PackDeps
    ghc-options:     -Wall

executable             packdeps
    if flag(web)
        Buildable: False
    ghc-options:       -Wall
    main-is:           packdeps-cli.hs

executable             packdeps-yesod
    if !flag(web)
        Buildable: False
    ghc-options:       -Wall
    main-is:           packdeps-yesod.hs

executable             save-newest
    if !flag(web)
        Buildable: False
    ghc-options:       -Wall
    main-is:           save-newest.hs
    build-depends:     yesod-newsfeed         == 0.1.*
                     , yesod                  == 0.8.*
                     , hamlet                 == 0.8.*

source-repository head
  type:     git
  location: git://github.com/snoyberg/packdeps.git
