name:              packdeps-yesod
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://packdeps.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , yesod-newsfeed                >= 1.0        && < 1.1
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3
                 , packdeps                      >= 0.4        && < 0.5
                 , http-conduit                  >= 1.4        && < 1.5
                 , time
                 , Cabal
                 , containers
                 , zlib
                 , deepseq

executable         packdeps
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , packdeps-yesod
                     , yesod-default
    ghc-options:   -Wall -threaded -O2
