name:              packdeps-yesod
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://packdeps.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  ., ..
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Distribution.PackDeps
                     Distribution.PackDeps.Types
                     Distribution.PackDeps.Util

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1        && < 1.2
                 , yesod-newsfeed                >= 1.1        && < 1.2
                 , clientsession
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.3        && < 1.4
                 , packdeps                      >= 0.4        && < 0.5
                 , http-conduit
                 , conduit                       >= 0.5        && < 0.6
                 , time
                 , Cabal
                 , containers
                 , deepseq
                 , tar
                 , split
                 , vector
                 , hashable
                 , transformers
                 , binary
                 , unordered-containers
                 , ghc-prim
                 , classy-prelude-conduit
                 , filepath
                 , data-default

executable         packdeps
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , packdeps-yesod
                     , yesod-default
    ghc-options:   -Wall -threaded -O2
